--- a/kdecoration/config/ui/darklyexceptiondialog.ui
+++ b/kdecoration/config/ui/darklyexceptiondialog.ui
@@ -49,7 +49,7 @@
       <item row="2" column="2">
        <widget class="QPushButton" name="detectDialogButton">
         <property name="text">
-         <string>Detect Window Properties</string>
+         <string>Detect Window Properties…</string>
         </property>
        </widget>
       </item>
