Making the tabs follow the same style
It was nice that we had two different kinds of tabs, but it was also annoying.
Now we have three kinds of tabs, but it looks like one so it's probably a bit less annoying. 

This change should be reversible with a setting

--- a/kstyle/config/ui/darklystyleconfig.ui
+++ b/kstyle/config/ui/darklystyleconfig.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>670</width>
-    <height>502</height>
+    <height>503</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -566,6 +566,13 @@
           <widget class="QRadioButton" name="_tabBarAltStyle">
            <property name="text">
             <string>„TabBarAltStyle”</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QCheckBox" name="_documentModeTabs">
+           <property name="text">
+            <string>Lightly Document Mode Tabs</string>
            </property>
           </widget>
          </item>
